Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Thu Aug 2 2012 Thunor <thunorsif@hotmail.com>
- Checked through and tidied-up the launch and closewindow functions.
- Added a check when launch-ing that the window contains the required
  matching variable directive with a warning being displayed if missing.
- Added examples/miscellaneous/launch_and_closewindow.
- Added <input>, <input file> and refresh support to the timer widget.

* Mon Jul 30 2012 Thunor <thunorsif@hotmail.com>
- Refactored the radiobutton widget and added support for <input>,
  <input file> and refresh.
- Added clear function support to the radiobutton widget to make it
  consistent with the checkbox widget and support for save.
- Refactored the checkbox widget and added support for <input file> and
  save.

* Tue Jul 24 2012 Thunor <thunorsif@hotmail.com>
- Applied jamesbond's fix for the incorrectly ordered widgets on the
  Raspberry Pi (ARM).

* Thu Nov 22 2011 Thunor <thunorsif@hotmail.com>
- Added an example application PlayMusic.

* Thu Oct 6 2011 Thunor <thunorsif@hotmail.com>
- Added the option to dump the examples as suggested by Dougal.

* Sun Oct 2 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug that was causing slowness at start-up when loading the
  XML-like GUI description from an environment variable; loading from
  a file or stdin though are fine.

* Mon Sep 26 2011 Thunor <thunorsif@hotmail.com>
- Version 0.8.0 released (r306)
- Updated the documentation.

* Sun Sep 25 2011 Thunor <thunorsif@hotmail.com>
- Exported the wiki to doc/reference (script included).

* Fri Sep 23 2011 Thunor <thunorsif@hotmail.com>
- Added examples/miscellaneous/expand_and_fill.
- Increased MAXWIDGETS from the tiny 256 (21MB virt) to 529 (25MB virt).
  1024 would've been nice but virtual memory jumps to 34MB. The array
  really should be dynamically allocated but it's a job for another day.

* Thu Sep 22 2011 Thunor <thunorsif@hotmail.com>