@@ -33,6 +33,7 @@
 #include "widget_text.h"
 #include "widget_timer.h"
 #include "widget_tree.h"
+#include "widget_window.h"
 
 extern gboolean option_no_warning;
 
@@ -323,6 +324,10 @@ variables_set_value(const char *name,
 			widget_tree_fileselect(toset, name, value);
 			break;
 #endif
+		case WIDGET_WINDOW:
+			widget_window_fileselect(toset, name, value);
+			break;
+
 
 		case WIDGET_ENTRY:
 			gtk_entry_set_text(GTK_ENTRY(toset->Widget), value);
@@ -394,6 +399,9 @@ variables_save(const char *name)
 			widget_tree_save(var);
 			break;
 #endif
+		case WIDGET_WINDOW:
+			widget_window_save(var);
+			break;
 
 
 		case WIDGET_ENTRY:
@@ -503,6 +511,9 @@ variables_refresh(const char *name)
 			widget_tree_refresh(var);
 			break;
 #endif
+		case WIDGET_WINDOW:
+			widget_window_refresh(var);
+			break;
 
 
 		case WIDGET_ENTRY:
@@ -1143,6 +1154,9 @@ variables_clear(const char *name)
 			widget_tree_clear(toclear);
 			break;
 #endif
+		case WIDGET_WINDOW:
+			widget_window_clear(toclear);
+			break;
 
 
 		case WIDGET_ENTRY:
@@ -1257,6 +1271,9 @@ remove_selected_variable(const char *name)
 			widget_tree_removeselected(toclear);
 			break;
 #endif
+		case WIDGET_WINDOW:
+			widget_window_removeselected(toclear);
+			break;
 
 
 		case WIDGET_ENTRY:
